--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 server.port=8080
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+api.response-codes.ok.desc=OK
+api.response-codes.badRequest.desc=BAD_REQUEST
