--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=tfm
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/tfm?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/tfm
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=UOC_tfm
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
