--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=tfm
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/tfm
-spring.datasource.username=root
-spring.datasource.password=UOC_tfm
+
+spring.datasource.url=jdbc:mariadb://sql7.freemysqlhosting.net:3306/sql7751874
+spring.datasource.username=sql7751874
+spring.datasource.password=ndW6cYz1Qj
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
