--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.username=sql7751874
 spring.datasource.password=ndW6cYz1Qj
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
